This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
10/3/20: Fixed rounding of exposure times when setting up variable frame sums
for K3 and improved behavior of frame summing setup upon changes (In 3.8).

10/2/20: Fixed NormCondenserInLowDose so it happens after changing to the new
intensity (In 3.8).

10/2/20: Fixed drift report from autofocus when there are fewer than 3 rolling
buffers (In 3.8).

9/28/20: SEM_3-8-2
9/28/20: Fixed crash from SerialEMproperties starting with blank line (In 3.8).

9/28/20: Made hole finder use smallest polygon on image instead of largest one
(In 3.8).

9/28/20: Made a value of for NormCondenserInLowDose normalize minicondenser
and objective lenses also (In 3.8).

9/28/20: Fixed crash on second dose-symmetric series, broken 9-14 (In 3.8).

9/24/20: Fixed beam centering from edges with float images and added a
property to set the fraction that the region outside the beam has to be below
the mean (In 3.8).

9/23/20: Added script commands DeferLogUpdates and SuspendNavRedraw and
avoided returning to event loop when possible to speed up repetitive script
actions.

9/20/20: Fixed bug that sometimes loaded a map without assigning its ID to a
buffer; fixed display of labels around the current point and shift-double-click
deletion of one multihole position with groups collapsed; improved display of
multishot pattern with hole combiner open; added grid of points or found holes
to the table viewer in one step at the end (In 3.8).

9/16/20: Added script commands SetItemSeriesAngles to set angle range and
bidirectional start for Navigator items marked for series, and
SetItemTargetDefocus to set target for items marked for any acquisition.

9/16/20: Added script commands SetFolderForFrames to set path or folder for